# raygleam-test2

./: .gitignore  Cargo.toml  README.md  build.rs  gleam.toml  raylib.erl
priv/: readme.md
src/: raygleam.gleam
src-rs/: lib.rs
src/raygleam/: colors.gleam  draw.gleam  raylib.erl  types.gleam  window.gleam
test/: raygleam_test.gleam
